IALERT-4014: Address some critical and high flagged sonar issues.